authentication (#28)
* added repos

* Added Trainee and Trainer repo

* changed repo method and name of entity field

* fixed

* added mapper:

* fix minor test error

* added unit tests

* test

* traineeService createTrainee method

* authentication

* fixed authentication method

---------

Co-authored-by: saidmurod <saidmurod217@gmail.com>
Co-authored-by: saidmurod <s.xamidov@newuu.uz>